--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,3 +25,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: id
+
+      - name: apt
+        run: apt install wget && id
