--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,4 +27,4 @@ jobs:
         run: id
 
       - name: npm
-        run: npm install -g yarn && id
+        run: npm install -g yarn && echo "$NODE_PATH"
