--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,40 +14,16 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    strategy:
+      matrix:
+        include: 
+          - runner: "ubuntu-latest"
+            app: ["jq","curl"]
+          - runner: "macos-latest"
+            app: ["zsh","yq"]
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: id
-
-      - name: before
-        run: |
-          npm -v
-          java -version
-          mvn -version
-          env
-          
-      - name: Setup Maven Action
-        uses: s4u/setup-maven-action@v1.7.0
-        with:
-          java-version: 17
-          java-distribution: temurin
-          maven-version: 3.8.7
-
-      - name: Use Node.js 12
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-
-      - name: after
-        run: |
-          npm -v
-          java -version
-          mvn -version
-          env
+      - run: ${{ matrix.app }} --version
